Revision history for {{$dist->name}}

{{$NEXT}}
          Moved last_id to last_index ( was a bad name anyway )

0.02004302 2009-09-13 02:06:26 UTC
          Added a Ease-Of-Use subclassing utility.
          Moved D::C core to the subclassing utility.
          Added subclassing example.

0.02004222 2009-09-12 22:23:22 UTC
          Added a plugin infrastructure w/ Roles.
          Moved ->count to role composition ( you wont notice this )
          Increased input strictness with really basic MX::Types based input validation.
           ( if you're going to be using _key or _at methods, use them properly ! :) )
          Added ->last_id via Counter plug.
          Moved the non-working sorting routines to a plug. Maybe they'll see some love there.

0.02004206 2009-09-12 06:01:08 UTC
          Support for multiple-value commands ( Thanks James Laver )
          Support for ->count() mechanism     ( Thanks James Laver )

0.02003813 2009-09-08 13:10:54 UTC
          Clone Support works and tested.
          Clones are MX::Cloned, and deep.
          minor++ # version scheme incompatible
          dist.ini now shipping with dist
          DZIL CompileTests
          Versioning Scheme switched to AutoVersion::Relative
          Added MooseX::Clone support
          Added MooseX::Types Deps
          Added MooseX::Has::Sugar Deps
          Added more author tests
          Assload of Typos Fixed

0.0101    2009-08-22 10:09:57 UTC
          Fixed some build deps

0.0100    2009-08-21 16:24:40 UTC
          First version.
